fix broken style in news source name

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -1,4 +1,4 @@
 h2{
-    font-size: 80px;
+    font-size: 20px;
     color:red;
 }
